@@ -34,3 +34,4 @@ Changes between version 1.1 and 1.2
 * Added complete KeyInfo handling for XENCEncryptedType
 * Fix to stop re-use of derived key encrypting key when decrypting multiple elements in a document
 * Fix to ignore encryption exceptions during a private key decrypt
+* Add code to detect ASN.1 encoded DSA signatures and validate accordingly
